@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Solved a memory corruption issue that would happen if a socket connect
+  operation produced an error immediately, such as Network Unreachable. The
+  event handler was throwing a Lua error, preventing Nsock from cleaning up
+  properly, leaking events. [Abhishek Singh, Daniel Miller]
+
 o [NSE] Added the datetime library for performing date and time calculations,
   and as a helper to the clock-skew script.
 
